...
            android:layout_height="match_parent"
            android:background="@color/white"/>
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:src="@drawable/profile"
            android:id="@+id/btn_nav_profile"
            android:background="@android:color/transparent"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            android:onClick="navProfile"/>
    </LinearLayout>
    <LinearLayout
...
